Added httpClient, rxjs, service and GET request for observable

--- a/real_estate_client/angular.json
+++ b/real_estate_client/angular.json
@@ -31,6 +31,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/data",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -38,7 +39,6 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
             "scripts": []
