--- a/real_estate_client/package.json
+++ b/real_estate_client/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@primeuix/themes": "^1.2.1",
     "bootstrap": "^5.3.7",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
